manifests/teambicyclesinc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: teambicyclesinc
  name: mysql
spec:
  selector:
    app: teambicyclesinc
    role: db
  type: ClusterIP
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  namespace: teambicyclesinc
  name: wordpress
spec:
  selector:
    app: teambicyclesinc
    role: wordpress
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
  namespace: teambicyclesinc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: teambicyclesinc
        role: db
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        resources:
          limits:
            cpu: "1"
            memory: "200Mi"
      volumes:
      - name: mysql-data
        hostPath:
          path: /mnt/gv0/teambicyclesinc/mysql
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: teambicyclesinc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: teambicyclesinc
        role: wordpress
    spec:
      containers:
      - name: wordpress
        image: quay.io/ktbartholomew/teambicyclesinc
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: wp-uploads
          mountPath: /var/www/html/wp-content/uploads
        resources:
          limits:
            cpu: "0.5"
            memory: "100Mi"
      volumes:
      - name: wp-uploads
        hostPath:
          path: /mnt/gv0/teambicyclesinc/wp-uploads
